--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -56,6 +56,7 @@
 @string{iclr="Proc. Int. Conf. on Learning Representations (ICLR)"}
 @string{tie="IEEE Trans. on Industrial Electronics"}
 @string{cl="Computational Linguistics"}
+@string{emnlp="Proc. Conf. on Empirical Methods in Natural Language Processing (EMNLP)"}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % publications from our lab
@@ -3266,78 +3267,10 @@ year={2014}
    note = {arXiv:1512.01274, 2015},
 }
 
-@inproceedings{Tay:ICLR'21,
-title={Long Range Arena : A Benchmark for Efficient Transformers },
-author={Yi Tay and Mostafa Dehghani and Samira Abnar and Yikang Shen and Dara Bahri and Philip Pham and Jinfeng Rao and Liu Yang and Sebastian Ruder and Donald Metzler},
-booktitle=iclr,
-year={2021},
-}
-
-@inproceedings{Gu:NIPS'20,
- author = {Gu, Albert and Dao, Tri and Ermon, Stefano and Rudra, Atri and R\'{e}, Christopher},
- booktitle = nips,
- pages = {1474--1487},
- title = {{HiPPO}: Recurrent Memory with Optimal Polynomial Projections},
- volume = {33},
- year = {2020}
-}
-
-@inproceedings{Gu:NIPS'21,
-title={Combining Recurrent, Convolutional, and Continuous-time Models with Linear State Space Layers},
-author={Albert Gu and Isys Johnson and Karan Goel and Khaled Kamal Saab and Tri Dao and Atri Rudra and Christopher R{\'e}},
-booktitle=nips,
-year={2021},
-}
-
-@inproceedings{Gu:ICLR'22,
-  title={Efficiently Modeling Long Sequences with Structured State Spaces},
-  author={Albert Gu and Karan Goel and Christopher R{\'e}},
-  booktitle=iclr,
-  year={2022},
-}
-
-@inproceedings{Gupta:NIPS'22,
-title={Diagonal State Spaces are as Effective as Structured State Spaces},
-author={Ankit Gupta and Albert Gu and Jonathan Berant},
-booktitle=nips,
-year={2022},
-}
-
-@inproceedings{Gu:NIPS'22,
- author = {Gu, Albert and Goel, Karan and Gupta, Ankit and R\'{e}, Christopher},
- booktitle = nips,
- pages = {35971--35983},
- title = {On the Parameterization and Initialization of Diagonal State Space Models},
- volume = {35},
- year = {2022}
-}
-
-@inproceedings{Smith:ICLR'23,
-title={Simplified State Space Layers for Sequence Modeling},
-author={Jimmy T.H. Smith and Andrew Warrington and Scott Linderman},
-booktitle=iclr,
-year={2023},
-}
-
 @misc{Gu:ARXIV'23,
   title={Mamba: Linear-Time Sequence Modeling with Selective State Spaces},
   author={Albert Gu and Tri Dao},
   note = {arXiv:2312.00752, 2023},
-}
-
-@inproceedings{Goel:ICML'22,
-  title={It's raw! audio generation with state-space models},
-  author={Karan Goel and Albert Gu and Chris Donahue and Christopher R{\'e}},
-  booktitle=icml,
-  year={2022},
-}
-
-@inproceedings{Orvieto:ICML'23,
-  author = {Orvieto, Antonio and Smith, Samuel L and Gu, Albert and Fernando, Anushan and Gulcehre, Caglar and Pascanu, Razvan and De, Soham},
-  title = {Resurrecting recurrent neural networks for long sequences},
-  booktitle=icml,
-  year={2023},
-  location = {<conf-loc>, <city>Honolulu</city>, <state>Hawaii</state>, <country>USA</country>, </conf-loc>},
 }
 
 @article{Pedregosa:JMLR'11,
@@ -5061,7 +4994,7 @@ Year={2013}
 @inproceedings{Cho:EMNLP'14,
   title={Learning Phrase Representations using {RNN} Encoder–Decoder for Statistical Machine Translation},
   author={Kyunghyun Cho and Bart {van Merri\"{e}nboer} and Caglar Gulcehre and Dzmitry Bahdanau and Fethi Bougares and Holger Schwenk and Yoshua Bengio},
-  booktitle={Proc. Conf. on Empirical Methods in Natural Language Processing (EMNLP)},
+  booktitle=emnlp,
   month = {October},
   year={2014},
   location = {Doha, Qatar},
@@ -5549,144 +5482,216 @@ pages={11106--11115}
   location = {Munich, Germany},
 }
 
-@inproceedings{Gu:ICLR'23,
-title={How to Train your {HIPPO}: State Space Models with Generalized Orthogonal Basis Projections},
-author={Albert Gu and Isys Johnson and Aman Timalsina and Atri Rudra and Christopher R{\'e}},
-booktitle=iclr,
-year={2023},
-}
-
 @inproceedings{Chen:NIPS'18,
- author={Ricky Tian Qi Chen and Yulia Rubanova and Jesse Bettencourt and David Duvenaud},
- booktitle = nips,
- title = {Neural Ordinary Differential Equations},
- volume = {31},
- year = {2018}
+  author = {Chen, Ricky T. Q. and Rubanova, Yulia and Bettencourt, Jesse and Duvenaud, David},
+  title = {Neural Ordinary Differential Equations},
+  booktitle = nips,
+  year = {2018},
+  month = {December},
+  location = {Montr{\'e}al, QC, Canada},
 }
 
 @inproceedings{Rubanova:NIPS'19,
+  author = {Rubanova, Yulia and Chen, Ricky T. Q. and Duvenaud, David},
   title={Latent ordinary differential equations for irregularly-sampled time series},
-  author={Yulia Rubanova and Ricky Tian Qi Chen and David Duvenaud},
-  journal=nips,
-  volume={32},
-  year={2019}
+  booktitle = nips,
+  year = {2019},
+  month = {December},
+  location = {Vancouver, BC, Canada},
 }
 
 @inproceedings{De:NIPS'19,
-  title={GRU-ODE-Bayes: Continuous modeling of sporadically-observed time series},
   author={De Brouwer, Edward and Simm, Jaak and Arany, Adam and Moreau, Yves},
-  journal=nips,
-  volume={32},
-  year={2019}
+  title={{GRU}-{ODE}-{B}ayes: Continuous modeling of sporadically-observed time series},
+  booktitle = nips,
+  year = {2019},
+  month = {December},
+  location = {Vancouver, BC, Canada},
 }
 
 @inproceedings{Voelker:NIPS'19,
- author = {Voelker, Aaron and Kaji\'{c}, Ivana and Eliasmith, Chris},
- booktitle = nips,
- title = {Legendre Memory Units: Continuous-Time Representation in Recurrent Neural Networks},
- volume = {32},
- year = {2019}
+  author = {Voelker, Aaron and Kaji{\'c}, Ivana and Eliasmith, Chris},
+  title = {{L}egendre {M}emory {U}nits: Continuous-Time Representation in Recurrent Neural Networks},
+  booktitle = nips,
+  year = {2019},
+  month = {December},
+  location = {Vancouver, BC, Canada},
+}
+
+@inproceedings{Gu:NIPS'20,
+  author = {Gu, Albert and Dao, Tri and Ermon, Stefano and Rudra, Atri and R\'{e}, Christopher},
+  title = {{HiPPO}: Recurrent Memory with Optimal Polynomial Projections},
+  booktitle = nips,
+  year = {2020},
+  month = {December},
+  location = {Vancouver, BC, Canada},
+}
+
+% NIPS 21 was held online
+@inproceedings{Hajimolahoseini:NIPS'21,
+  author={Hajimolahoseini, Habib and Rezagholizadeh, Mehdi and Partovinia, Vahid and Tahaei, Marzieh and Awad, Omar Mohamed and Liu, Yang},
+  title = {Compressing pre-trained language models using progressive low rank decomposition},
+  booktitle = nips,
+  year = {2021},
+  month = {December},
+}
+
+@inproceedings{Gu:NIPS'21,
+  author={Albert Gu and Isys Johnson and Karan Goel and Khaled Kamal Saab and Tri Dao and Atri Rudra and Christopher R{\'e}},
+  title={Combining Recurrent, Convolutional, and Continuous-time Models with Linear State Space Layers},
+  booktitle=nips,
+  year={2021},
+  month = {December},
+}
+
+@inproceedings{Gupta:NIPS'22,
+  author={Ankit Gupta and Albert Gu and Jonathan Berant},
+  title={Diagonal State Spaces are as Effective as Structured State Spaces},
+  booktitle=nips,
+  year={2022},
+  month = {December},
+  location = {New Orleans, LA, USA},
+}
+
+@inproceedings{Gu:NIPS'22,
+  author = {Gu, Albert and Goel, Karan and Gupta, Ankit and R\'{e}, Christopher},
+  title = {On the Parameterization and Initialization of Diagonal State Space Models},
+  booktitle = nips,
+  year = {2022},
+  month = {December},
+  location = {New Orleans, LA, USA},
+}
+
+% ICLR'21 was held online
+@inproceedings{Tay:ICLR'21,
+  title={{L}ong {R}ange {A}rena : A Benchmark for Efficient Transformers },
+  author={Yi Tay and Mostafa Dehghani and Samira Abnar and Yikang Shen and Dara Bahri and Philip Pham and Jinfeng Rao and Liu Yang and Sebastian Ruder and Donald Metzler},
+  booktitle=iclr,
+  year={2021},
+  month = {May},
+}
+
+% ICLR'22 was held online
+@inproceedings{Gu:ICLR'22,
+  title={Efficiently Modeling Long Sequences with Structured State Spaces},
+  author={Albert Gu and Karan Goel and Christopher R{\'e}},
+  booktitle=iclr,
+  year={2022},
+  month = {May},
+}
+
+@inproceedings{Smith:ICLR'23,
+  title={Simplified State Space Layers for Sequence Modeling},
+  author={Jimmy T.H. Smith and Andrew Warrington and Scott Linderman},
+  booktitle=iclr,
+  year={2023},
+  month = {May},
+  location = {Kigali, Rwanda},
+}
+
+@inproceedings{Gu:ICLR'23,
+  title={How to Train your {HIPPO}: State Space Models with Generalized Orthogonal Basis Projections},
+  author={Albert Gu and Isys Johnson and Aman Timalsina and Atri Rudra and Christopher R{\'e}},
+  booktitle=iclr,
+  year={2023},
+  month = {May},
+  location = {Kigali, Rwanda},
 }
 
 @inproceedings{Ma:ICLR'23,
-title={Mega: Moving Average Equipped Gated Attention},
-author={Xuezhe Ma and Chunting Zhou and Xiang Kong and Junxian He and Liangke Gui and Graham Neubig and Jonathan May and Luke Zettlemoyer},
-booktitle=iclr,
-year={2023},
+  title={Mega: Moving Average Equipped Gated Attention},
+  author={Xuezhe Ma and Chunting Zhou and Xiang Kong and Junxian He and Liangke Gui and Graham Neubig and Jonathan May and Luke Zettlemoyer},
+  booktitle=iclr,
+  year={2023},
+  month = {May},
+  location = {Kigali, Rwanda},
 }
 
 @inproceedings{David:ICLR'23,
-title={Decision S4: Efficient Sequence-Based {RL} via State Spaces Layers},
-author={Shmuel Bar David and Itamar Zimerman and Eliya Nachmani and Lior Wolf},
-booktitle={The Eleventh International Conference on Learning Representations },
-year={2023},
+  title={Decision {S4}: Efficient Sequence-Based {RL} via State Spaces Layers},
+  author={Shmuel Bar David and Itamar Zimerman and Eliya Nachmani and Lior Wolf},
+  booktitle=iclr,
+  year={2023},
+  month = {May},
+  location = {Kigali, Rwanda},
 }
 
-@inproceedings{He:CVPR'23,
-  title={Clip-s4: Language-guided self-supervised semantic segmentation},
-  author={He, Wenbin and Jamonnak, Suphanut and Gou, Liang and Ren, Liu},
-  booktitle=cvpr,
-  pages={11207--11216},
-  year={2023}
+@inproceedings{Sun:ICLR'24,
+  title={A Simple and Effective Pruning Approach for Large Language Models},
+  author={Mingjie Sun and Zhuang Liu and Anna Bair and J Zico Kolter},
+  booktitle=iclr,
+  year={2024},
+  month = {May},
+  location = {Vienna, Austria},
+}
+
+@inproceedings{Goel:ICML'22,
+  title={It's raw! audio generation with state-space models},
+  author={Karan Goel and Albert Gu and Chris Donahue and Christopher R{\'e}},
+  booktitle=icml,
+  pages = {7616--7633},
+  year={2022},
+}
+
+@inproceedings{Orvieto:ICML'23,
+  author = {Orvieto, Antonio and Smith, Samuel L and Gu, Albert and Fernando, Anushan and Gulcehre, Caglar and Pascanu, Razvan and De, Soham},
+  title = {Resurrecting recurrent neural networks for long sequences},
+  booktitle=icml,
+  pages = {26670--26698},
+  year={2023},
+}
+
+@inproceedings{Frantar:ICML'23,
+  title = {{S}parse{GPT}: Massive Language Models Can be Accurately Pruned in One-Shot},
+  author = {Frantar, Elias and Alistarh, Dan},
+  booktitle=icml,
+  pages = {10323--10337},
+  year = {2023},
+}
+
+% no pages yet
+@inproceedings{Zhu:ICML'24,
+  title={Vision {M}amba: Efficient Visual Representation Learning with Bidirectional State Space Model},
+  author={Lianghui Zhu and Bencheng Liao and Qian Zhang and Xinlong Wang and Wenyu Liu and Xinggang Wang},
+  booktitle=icml,
+  year={2024},
 }
 
 @inproceedings{Lu:ACL'24,
   title={Not All Experts are Equal: Efficient Expert Pruning and Skipping for Mixture-of-Experts Large Language Models},
   author={Xudong Lu and Qi Liu and Yuhui Xu and Aojun Zhou and Siyuan Huang and Bo Zhang and Junchi Yan and Hongsheng Li},
   booktitle={Annual Meeting of the Association for Computational Linguistics},
-  month={aug},
+  pages={6159--6172},
   year={2024},
-  address="Bangkok, Thailand",
-  pages="6159--6172",
-}
-
-@inproceedings{Hajimolahoseini:NIPS'21,
-  title={Compressing pre-trained language models using progressive low rank decomposition},
-  author={Hajimolahoseini, Habib and Rezagholizadeh, Mehdi and Partovinia, Vahid and Tahaei, Marzieh and Awad, Omar Mohamed and Liu, Yang},
-  journal=nips,
-  year={2021}
+  month = {August},
+  location = {Bangkok, Thailand},
 }
 
 @inproceedings{Ji:EMNLP'24,
-    title = "Adaptive Feature-based Low-Rank Compression of Large Language Models via {B}ayesian Optimization",
-    author = "Ji, Yixin  and
-      Xiang, Yang  and
-      Li, Juntao  and
-      Xia, Qingrong  and
-      Ye, Zi  and
-      Duan, Xinyu  and
-      Wang, Zhefeng  and
-      Chen, Kehai  and
-      Zhang, Min",
-    editor = "Al-Onaizan, Yaser  and
-      Bansal, Mohit  and
-      Chen, Yun-Nung",
-    booktitle = "Findings of the Association for Computational Linguistics: EMNLP 2024",
-    month = nov,
-    year = "2024",
-    address = "Miami, Florida, USA",
-    publisher = "Association for Computational Linguistics",
-    pages = "4152--4168",
+  title={Adaptive Feature-based Low-Rank Compression of Large Language Models via {B}ayesian Optimization},
+  author={Ji, Yixin  and Xiang, Yang  and Li, Juntao  and Xia, Qingrong  and Ye, Zi  and Duan, Xinyu  and Wang, Zhefeng  and Chen, Kehai  and Zhang, Min},
+  booktitle=emnlp,
+  month = {November},
+  year={2024},
+  location = {Miami, FL, USA},
 }
 
-@article{Lin:TPAMI'19,
-  author={Lin, Shaohui and Ji, Rongrong and Chen, Chao and Tao, Dacheng and Luo, Jiebo},
-  journal=tpami,
-  title={Holistic CNN Compression via Low-Rank Decomposition with Knowledge Transfer},
-  year={2019},
-  volume={41},
-  number={12},
-  pages={2889-2905},
-  keywords={Knowledge transfer;Image coding;Task analysis;Information exchange;Computational modeling;Convolutional codes;Convolutional neural networks;low-rank decomposition;knowledge transfer;CNN compression;CNN acceleration},
-  doi={10.1109/TPAMI.2018.2873305}}
+@ARTICLE{Lin:TPAMI'19,
+  author = {Lin, Shaohui and Ji, Rongrong and Chen, Chao and Tao, Dacheng and Luo, Jiebo},
+	journal = tpami,
+	title = {Holistic CNN Compression via Low-Rank Decomposition with Knowledge Transfer},
+	year = {2019},
+        month = {October},
+        volume={41},
+        number = {12},
+        pages={2889-2905},
+}
 
 @inproceedings{Girshick:ICCV'15,
+  title={Fast {R-CNN}},
   author={Girshick, Ross},
-  booktitle={2015 IEEE International Conference on Computer Vision (ICCV)},
-  title={Fast R-CNN},
-  year={2015},
-  volume={},
-  number={},
-  pages={1440-1448},
-  keywords={Training;Proposals;Feature extraction;Object detection;Pipelines;Computer architecture;Open source software},
-  doi={10.1109/ICCV.2015.169}}
-
-@inproceedings{Sun:ICLR'24,
-title={A Simple and Effective Pruning Approach for Large Language Models},
-author={Mingjie Sun and Zhuang Liu and Anna Bair and J Zico Kolter},
-booktitle=iclr,
-year={2024},
-}
-
-@InProceedings{Frantar:ICML'23,
-  title = {{S}parse{GPT}: Massive Language Models Can be Accurately Pruned in One-Shot},
-  author = {Frantar, Elias and Alistarh, Dan},
-  booktitle = icml,
-  pages = {10323--10337},
-  year = {2023},
-  editor = {Krause, Andreas and Brunskill, Emma and Cho, Kyunghyun and Engelhardt, Barbara and Sabato, Sivan and Scarlett, Jonathan},
-  volume = {202},
-  series = {Proceedings of Machine Learning Research},
-  month = {23--29 Jul},
-  publisher = {PMLR},
+  booktitle = {Proc. IEEE Int. Conf. on Computer Vision (ICCV)},
+  month = {December},
+  year = {2015},
+  location = {Santiago, Chile},
 }
