--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5631,6 +5631,7 @@ pages={11106--11115}
   booktitle=icml,
   pages = {7616--7633},
   year={2022},
+  month = {June},
 }
 
 @inproceedings{Orvieto:ICML'23,
@@ -5639,6 +5640,7 @@ pages={11106--11115}
   booktitle=icml,
   pages = {26670--26698},
   year={2023},
+  month = {July},
 }
 
 @inproceedings{Frantar:ICML'23,
@@ -5647,6 +5649,7 @@ pages={11106--11115}
   booktitle=icml,
   pages = {10323--10337},
   year = {2023},
+  month = {July},
 }
 
 % no pages yet
@@ -5655,6 +5658,7 @@ pages={11106--11115}
   author={Lianghui Zhu and Bencheng Liao and Qian Zhang and Xinlong Wang and Wenyu Liu and Xinggang Wang},
   booktitle=icml,
   year={2024},
+  month = {July},
 }
 
 @inproceedings{Lu:ACL'24,
@@ -5679,7 +5683,7 @@ pages={11106--11115}
 @ARTICLE{Lin:TPAMI'19,
   author = {Lin, Shaohui and Ji, Rongrong and Chen, Chao and Tao, Dacheng and Luo, Jiebo},
 	journal = tpami,
-	title = {Holistic CNN Compression via Low-Rank Decomposition with Knowledge Transfer},
+	title = {Holistic {CNN} Compression via Low-Rank Decomposition with Knowledge Transfer},
 	year = {2019},
         month = {October},
         volume={41},
