--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5616,6 +5616,15 @@ pages={11106--11115}
   location = {Kigali, Rwanda},
 }
 
+@inproceedings{Fu:ICLR'23,
+  title={Hungry {H}ungry {H}ippos: Towards Language Modeling with State Space Models},
+  author={Daniel Y Fu and Tri Dao and Khaled Kamal Saab and Armin W Thomas and Atri Rudra and Christopher Re},
+  booktitle=iclr,
+  year={2023},
+  month = {May},
+  location = {Kigali, Rwanda},
+}
+
 @inproceedings{Sun:ICLR'24,
   title={A Simple and Effective Pruning Approach for Large Language Models},
   author={Mingjie Sun and Zhuang Liu and Anna Bair and J Zico Kolter},
@@ -5699,3 +5708,43 @@ pages={11106--11115}
   year = {2015},
   location = {Santiago, Chile},
 }
+
+@ARTICLE{Imani:TNNLS'22,
+  author = {Imani, Mahdi and Ghoreishi, Seyede Fatemeh},
+  journal = tnnls,
+  title = {Two-Stage {B}ayesian Optimization for Scalable Inference in State-Space Models},
+  year = {2022},
+        month = {October},
+        volume = {33},
+        number = {10},
+        pages = {5138-5149},
+}
+
+@inproceedings{Imani:AAAI'19,
+  title={{MFBO-SSM}: Multi-Fidelity {B}ayesian Optimization for Fast Inference in State-Space Models},
+  booktitle={Proc. AAAI Conference on Artificial Intelligence},
+  author={Imani, Mahdi and Ghoreishi, Seyede Fatemeh and Allaire, Douglas and Braga-Neto, Ulisses M.},
+  year={2019},
+  month={July},
+  pages={7858-7865}
+}
+
+@inproceedings{Siddiqi:ICML'05,
+  title = {Fast inference and learning in large-state-space {HMMs}},
+  author = {Siddiqi, Sajid M. and Moore, Andrew W.},
+  booktitle=icml,
+  year = {2005},
+  month = {August},
+  pages = {800-807}
+}
+
+@ARTICLE{Fagard:EI'24,
+  author = {Calliste Fagard-Jenkin and Len Thomas},
+  journal = {Ecological Informatics},
+  title = {Faster inference from state space models via {GPU} computing},
+  year = {2024},
+        month = {January},
+        volume = {80},
+        pages = {102486},
+}
+
