--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5748,3 +5748,102 @@ pages={11106--11115}
         pages = {102486},
 }
 
+% A projection based MOR method generated from gradient(Active Subspace, AS) instead of snapshots(POD)
+% Base model: CNN
+% Rank: if 3.6|Q1|SCI zone 2
+@article{Cui:SJMDS'20,
+author = {Cui, Chunfeng and Zhang, Kaiqi and Daulbaev, Talgat and Gusak, Julia and Oseledets, Ivan and Zhang, Zheng},
+title = {Active Subspace of Neural Networks: Structural Analysis and Universal Attacks},
+journal = {SIAM Journal on Mathematics of Data Science},
+year = {2020},
+volume = {2},
+number = {4},
+pages = {1096-1122},
+}
+
+% A projection based method using POD and Active Subspace
+% Base model: CNN
+% Rank: CCF C|if 5.3|Q2|SCI zone 2
+@article{Meneghetti:AI'23,
+  title={A dimensionality reduction approach for convolutional neural networks},
+  author={Meneghetti, Laura and Demo, Nicola and Rozza, Gianluigi},
+  journal={Applied Intelligence},
+  volume={53},
+  number={19},
+  pages={22818--22833},
+  year={2023},
+  publisher={Springer}
+}
+
+
+% An SVD extended method
+% Base model: Bert, LSTM
+% Rank: CCF A
+@inproceedings{Chen:NIPS'21,
+  title = {{DRONE}: Data-aware Low-rank Compression for Large NLP Models},
+  author = {Chen, Patrick and Yu, Hsiang-Fu and Dhillon, Inderjit and Hsieh, Cho-Jui},
+  booktitle=nips,
+  pages = {29321--29334},
+  year={2021},
+  month={December},
+}
+
+
+% An SVD method on FPGA
+% Base model: LSTM
+% Rank: CCF B|if 2.7|Q3|SCI zone 4
+@article{You:KIS'20,
+  author = {You, Yang and He, Yuxiong and Rajbhandari, Samyam and Wang, Wenhan and Hsieh, Cho-Jui and Keutzer, Kurt and Demmel, James},
+  title = {Fast {LSTM} by dynamic decomposition on cloud and distributed systems},
+  year = {2020},
+  publisher = {Springer-Verlag},
+    journal = {Knowledge and Information Systems},
+    month = nov,
+    volume = {62},
+    number = {11},
+    pages = {4169–4197},
+    issn = {0219-1377},
+    address = {Berlin, Heidelberg},
+}
+
+% SVD method compressing dictionary logits before softmax
+% not added
+@inproceedings{Shim:NIPS'17,
+  title = {{SVD-Softmax}: Fast Softmax Approximation on Large Vocabulary Neural Networks},
+  author = {Shim, Kyuhong and Lee, Minjae and Choi, Iksoo and Boo, Yoonho and Sung, Wonyong},
+  booktitle=nips,
+  year={2017},
+  month={December},
+  location = {Long Beach, CA, USA},
+}
+
+@ARTICLE{Lehtimäki:TNNLS'23,
+  author={Lehtimäki, Mikko and Paunonen, Lassi and Linne, Marja-Leena},
+	journal = tnnls,
+  title={Accelerating Neural {ODEs} Using Model Order Reduction},
+  year={2024},
+        month = {January},
+        volume = {35},
+        number={1},
+        pages={519-531},
+}
+
+@article{Constantine:SJSC'14,
+  author = {Constantine, Paul G. and Dow, Eric and Wang, Qiqi},
+  title = {Active Subspace Methods in Theory and Practice: Applications to Kriging Surfaces},
+  journal = {SIAM Journal on Scientific Computing},
+  year = {2014},
+  volume = {32},
+  number = {4},
+  pages = {A1500-A1524},
+}
+
+@inproceedings{Devlin:ACL'19,
+    title = "{BERT}: Pre-training of Deep Bidirectional Transformers for Language Understanding",
+    author = "Devlin, Jacob  and Chang, Ming-Wei  and Lee, Kenton  and Toutanova, Kristina",
+    booktitle = "Proc. Conf. of the North {A}merican Chapter of the Association for Computational Linguistics: Human Language Technologies",
+    month = jun,
+    year = "2019",
+    address = "Minneapolis, Minnesota",
+    pages = "4171--4186",
+}
