--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5847,3 +5847,26 @@ pages = {1096-1122},
     address = "Minneapolis, Minnesota",
     pages = "4171--4186",
 }
+
+@ARTICLE{Mohaidat:TAI'24,
+	author = {Tamador Mohaidat and Kasem Khalil},
+	journal = {IEEE Trans. on Artificial Intelligence},
+	title = {A Survey on Neural Network Hardware Accelerators},
+	year = {2024},
+        month = {August},
+        volume = {5},
+        number = {8},
+        pages = {3801--3822},
+}
+
+@Article{Appleyard:CoRR'16,
+  author =       {Jeremy Appleyard and Tom{\'{a}}s Kocisk{\'{y}} and Phil Blunsom},
+  title =        {Optimizing Performance of Recurrent Neural Networks on {GPUs}},
+  journal =      {CoRR},
+  year =         {2016},
+  month =     {April},
+  volume =   {abs/1604.01946},
+  eprinttype = {arXiv},
+  eprint    = {1604.01946},
+  url       = {http://arxiv.org/abs/1604.01946},
+}
