--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5870,3 +5870,34 @@ pages = {1096-1122},
   eprint    = {1604.01946},
   url       = {http://arxiv.org/abs/1604.01946},
 }
+
+@ARTICLE{Chen:ENGINEERING'20,
+	author = {Yiran Chen and Yuan Xie and Linghao Song and Fan Chen and Tianqi Tang},
+	journal = {Engineering},
+	title = {A Survey of Accelerator Architectures for Deep Neural Networks},
+	year = {2020},
+        month = {March},
+        volume = {6},
+        number = {3},
+        pages = {264--274},
+}
+
+@inproceedings{Gao:FPGA'18,
+  title = {{DeltaRNN}: A Power-efficient Recurrent Neural Network Accelerator},
+  author = {Chang Gao and Daniel Neil and Enea Ceolini and Shih-Chii Liu and Tobi Delbruck},
+  booktitle= {Proc. Int. Symp. on Field-Programmable Gate Arrays (FPGA)},
+  year = {2018},
+  month = {February},
+  location = {Monterey, CA, USA},
+  pages = {21-30}
+}
+
+@inproceedings{Shin:ISSCC'17,
+  title = {{DNPU}: An {8.1TOPS/W} Reconfigurable {CNN-RNN} Processor for General-Purpose Deep Neural Networks},
+  author = {Dongjoo Shin and Jinmook Lee and Jinsu Lee and Hoi-Jun Yoo},
+  booktitle= {Proc. Int. Solid-State Circuits Conference (ISSCC)},
+  year = {2017},
+  month = {February},
+  location = {San Francisco, CA, USA},
+  pages = {240-242}
+}
