--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5901,3 +5901,21 @@ pages = {1096-1122},
   location = {San Francisco, CA, USA},
   pages = {240-242}
 }
+
+@inproceedings{Korthikanti:MLSYS'23,
+  title = {Reducing Activation Recomputation in Large Transformer Models},
+  author = {Vijay Korthikanti and Jared Casper and Sangkug Lym and Lawrence McAfee and Michael Andersch and Mohammad Shoeybi and Bryan Catanzaro},
+  booktitle= {Proc. Conf. on Machine Learning and Systems (MLSys)},
+  year = {2023},
+  month = {Jun},
+  location = {Miami Beach, FL, USA},
+}
+
+@inProceedings{Narayanan:SC'21,
+  author =       {Deepak Narayanan and Mohammad Shoeybi and Jared Casper and Patrick LeGresley and Mostofa Patwary and Vijay Korthikanti and Dmitri Vainbrand and Prethvi Kashinkunti and Julie Bernauer and Bryan Catanzaro and Amar Phanishayee and Matei Zaharia},
+  title =        {Efficient large-scale language model training on {GPU} clusters using {megatron-LM}},
+  booktitle =    {Proc. Int. Conf. for High Performance Computing, Networking, Storage and Analysis (SC)},
+  year =     {2021},
+  month = {November},
+  location = {St. Louis, MO, USA},
+}
