--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5919,3 +5919,34 @@ pages = {1096-1122},
   month = {November},
   location = {St. Louis, MO, USA},
 }
+
+@inproceedings{Wang:ASPDAC'24,
+ author = {Hongji Wang and Yueyin Bai and Jun Yu and Kun Wang},
+ title = {{TransFRU}: Efficient Deployment of Transformers on {FPGA} with Full Resource Utilization},
+ booktitle = aspdac,
+ year = {2024},
+ month = {January},
+ location = {Incheon, Korea},
+ pages = {521--526}
+}
+
+@article{Wu:TVLSI'19,
+	title={A {3.89-GOPS/mW} Scalable Recurrent Neural Network Processor With Improved Efficiency on Memory and Computation},
+	author={Jiaquan Wu and Feiteng Li and Zhijian Chen and Xiaoyan Xiang},
+	journal=tvlsi,
+	volume={27},
+	number={12},
+	pages={2939--2943},
+	year={2019},
+	month={December}
+}
+
+@InProceedings{Ham:HPCA'20,
+  author =       {Tae Jun Ham and Sung Jun Jung and Seonghak Kim and Young H. Oh and Yeonhong Park and Yoonho Song and Jung-Hun Park and Sanghee Lee and Kyoung Park and Jae W. Lee and Deog-Kyoon Jeong},
+  title =        {{A}$^3$: Accelerating Attention Mechanisms in Neural Networks with Approximation},
+  booktitle =    hpca,
+  pages =    {328--341},
+  year =     {2020},
+  month =     {February},
+ location = {San Diego, CA, USA},
+}
