--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5817,8 +5817,8 @@ pages = {1096-1122},
   location = {Long Beach, CA, USA},
 }
 
-@ARTICLE{Lehtimäki:TNNLS'23,
-  author={Lehtimäki, Mikko and Paunonen, Lassi and Linne, Marja-Leena},
+@ARTICLE{Lehtimaki:TNNLS'23,
+  author={Lehtim\"{a}ki, Mikko and Paunonen, Lassi and Linne, Marja-Leena},
 	journal = tnnls,
   title={Accelerating Neural {ODEs} Using Model Order Reduction},
   year={2024},
