--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -4309,7 +4309,7 @@ location = {Austin, TX, USA},
 }
 
 @techreport{Jaeger:Report'01,
-  title={The ``echo state" approach to analysing and training recurrent neural networks},
+  title={The ``echo state'' approach to analysing and training recurrent neural networks},
   author={Herbert Jaeger},
   year={2001},
   institution={GMD - German National Research Institute for Computer Science}
@@ -5780,7 +5780,7 @@ pages = {1096-1122},
 % Base model: Bert, LSTM
 % Rank: CCF A
 @inproceedings{Chen:NIPS'21,
-  title = {{DRONE}: Data-aware Low-rank Compression for Large NLP Models},
+  title = {{DRONE}: Data-aware Low-rank Compression for Large {NLP} Models},
   author = {Chen, Patrick and Yu, Hsiang-Fu and Dhillon, Inderjit and Hsieh, Cho-Jui},
   booktitle=nips,
   pages = {29321--29334},
@@ -5949,4 +5949,15 @@ pages = {1096-1122},
   year =     {2020},
   month =     {February},
  location = {San Diego, CA, USA},
+}
+
+@InProceedings{Can:MSML'20,
+  author =       {Tankut Can and Kamesh Krishnamurthy and David J. Schwab},
+  title =        {Gating creates slow modes and controls phase-space complexity in {GRUs} and {LSTMs}},
+  booktitle = {Proc. of Mathematical and Scientific Machine Learning Conf. (MSML)},
+  series =  {Proceedings of Machine Learning Research},
+  pages =    {476--511},
+  volume= {107},
+  year =     {2020},
+  month =     {July},
 }
