--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -908,8 +908,10 @@ month ={June},
 @inproceedings{Cuesta:ISVLSI'10,
   title={Adaptive Task Migration Policies for Thermal control in {MPSoCs}},
   author={David Cuesta and Jose Ayala and Jose Hidalgo and David Atienza and Andrea Acquaviva and Enrico Macii},
-  booktitle= {IEEE Annual Symposium on VLSI},
+  booktitle= {Proc. IEEE Computer Society Annual Symposium on VLSI (ISVLSI)},
+  location = {Lixouri, Greece},
   pages={110--115},
+  month = {July},
   year={2010},
 }
 
@@ -2993,10 +2995,11 @@ year={2014}
 @inproceedings{Annamalai:ISVLSI'14,
   title={Reducing energy per instruction via dynamic resource allocation and voltage and frequency adaptation in asymmetric multicores},
   author={Arunachalam Annamalai and Rance Rodrigues and Israel Koren and Sandip Kundu},
-  booktitle={VLSI (ISVLSI), 2014 IEEE Computer Society Annual Symposium on},
+  booktitle={Proc. IEEE Computer Society Annual Symposium on VLSI (ISVLSI)},
   pages={436--441},
+  location = {Tampa, FL, USA},
+  month = {July},
   year={2014},
-  organization={IEEE}
 }
 
 @inproceedings{Carroll:RTAS'14,
@@ -5960,4 +5963,23 @@ pages = {1096-1122},
   volume= {107},
   year =     {2020},
   month =     {July},
+}
+
+@inproceedings{Siddhu:DATE'22,
+ author = {Lokesh Siddhu and Rajesh Kedia and Preeti Ranjan Panda},
+ title = {{CoreMemDTM}: Integrated Processor Core and {3D} Memory Dynamic Thermal Management for Improved Performance},
+ booktitle = date,
+ year = {2022},
+ month = {March},
+ location = {Antwerp, Belgium},
+ pages = {1377--1382}
+}
+
+@inproceedings{Niknam:ISVLSI'23,
+  title={{3D-TTP}: Efficient Transient Temperature-Aware Power Budgeting for {3D}-Stacked Processor-Memory Systems},
+  author={Sobhan Niknam and Yixian Shen and Anuj Pathania and Andy D. Pimentel},
+  booktitle= {Proc. IEEE Computer Society Annual Symposium on VLSI (ISVLSI)},
+  location = {Foz do Iguacu, Brazil},
+  month = {June},
+  year={2023},
 }
