--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5983,3 +5983,14 @@ pages = {1096-1122},
   month = {June},
   year={2023},
 }
+
+@article{Sussillo:NC'13,
+  title={Opening the Black Box: Low-Dimensional Dynamics in High-Dimensional Recurrent Neural Networks},
+  author={David Sussillo and Omri Barak},
+  journal=neuralcomp,
+  volume={25},
+  number={3},
+  pages={626--649},
+  year={2013},
+  month={March},
+}
