--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -5994,3 +5994,24 @@ pages = {1096-1122},
   year={2013},
   month={March},
 }
+
+@article{Paganini:CoRR'20,
+  author={Michela Paganini and Jessica Zosa Forde},
+  title={Streamlining Tensor and Network Pruning in PyTorch},
+  journal={CoRR},
+  year={2020},
+  volume={abs/2004.13770},
+  eprinttype = {arXiv},
+  eprint={2004.13770},
+}
+
+@ARTICLE{Cheng:TPAMI'24,
+  author = {Hongrong Cheng and Miao Zhang and Javen Qinfeng Shi},
+  journal = tpami,
+  title = {A Survey on Deep Neural Network Pruning: Taxonomy, Comparison, Analysis, and Recommendations},
+  year = {2024},
+        month = {August},
+        volume = {46},
+        number = {12},
+        pages = {10558-10578},
+}
