--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -6015,3 +6015,14 @@ pages = {1096-1122},
         number = {12},
         pages = {10558-10578},
 }
+
+@ARTICLE{Chen:INFFUS'23,
+  author = {Zonglei Chen and Minbo Ma and Tianrui Li and Hongjun Wang and Chongshou Li},
+  journal = {Information Fusion},
+  title = {Long sequence time-series forecasting with deep learning: A survey},
+  year = {2023},
+  month = {September},
+  volume = {97},
+  number = {101819},
+  pages = {1--36},
+}
