--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -6026,3 +6026,36 @@ pages = {1096-1122},
   number = {101819},
   pages = {1--36},
 }
+
+@inproceedings{Hsu:ICLR'22,
+  title={Language model compression with weighted low-rank factorization},
+  author={Yen-Chang Hsu and Ting Hua and Sungen Chang and Qian Lou and Yilin Shen and Hongxia Jin},
+  booktitle=iclr,
+  year={2022},
+}
+
+@inproceedings{Ren:LREC-COLING'24,
+    title={Low-rank prune-and-factorize for language model compression},
+    author={Siyu Ren and Kenny Q. Zhu},
+    booktitle={Proc. of the Joint Int. Conf. on Computational Linguistics, Language Resources and Evaluation (LREC-COLING)},
+    month={May},
+    year={2024},
+    address={Torino, Italia},
+    pages={10822--10832},
+}
+
+@inproceedings{Yu:KDD'24,
+    author={Hao Yu and Minghao Fu and Jiandong Ding and Yusheng Zhou and Jianxin Wu},
+    title={Unified Low-rank Compression Framework for Click-through Rate Prediction},
+    year={2024},
+    pages={6169-6180},
+    booktitle={Proc. of the ACM SIGKDD Conference on Knowledge Discovery and Data Mining (KDD)},
+    doi={10.1145/3637528.3671520},
+}
+
+@inproceedings{Xiao:AAAI'23,
+author={Xiao Jinqi and Zhang Chengming and Gong Yu and Yin Miao and Sui Yang and Xiang Lizhi and Tao Dingwen and Yuan Bo},
+title={{HALOC}: hardware-aware automatic low-rank compression for compact neural networks},
+booktitle={Proc. AAAI Conference on Artificial Intelligence},
+year={2023},
+}
