--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -6059,3 +6059,43 @@ title={{HALOC}: hardware-aware automatic low-rank compression for compact neural
 booktitle={Proc. AAAI Conference on Artificial Intelligence},
 year={2023},
 }
+
+@inproceedings{Shi:ICASSP'19,
+  title={Knowledge Distillation for Recurrent Neural Network Language Modeling with Trust Regularization},
+  author={Yangyang Shi and Mei-Yuh Hwang and Xin Lei and Haoyu Sheng},
+  booktitle={Proc. Int. Conf. on Acoustics, Speech and Signal Processing (ICASSP)},
+  pages={7230--7234},
+  year={2019},
+}
+
+@ARTICLE{Ma:SIVP'22,
+  author = {Hongbin Ma and Shuyuan Yang and Ruowu Wu and Xiaojun Hao and Huimin Long and Guangjun He},
+  journal = {Signal, Image and Video Processing},
+  title = {Knowledge distillation-based performance transferring for {LSTM-RNN} model acceleration},
+  year = {2022},
+  month = {January},
+  volume = {16},
+  OPTnumber = {101819},
+  pages = {1541--1548},
+}
+
+@ARTICLE{Moslemi:MLWA'24,
+  author = {Amir Moslemi and Anna Briskina and Zubeka Dang and Jason Li},
+  journal = {Machine Learning with Applications},
+  title = {A survey on knowledge distillation: Recent advancements},
+  year = {2024},
+  month = {December},
+  volume = {18},
+  number = {100605},
+  pages = {1--20},
+}
+
+@article{Hinton:CoRR'15,
+  author={Geoffrey Hinton and Oriol Vinyals and Jeff Dean},
+  title={Distilling the Knowledge in a Neural Network},
+  journal={CoRR},
+  year={2015},
+  volume={abs/1503.02531},
+  eprinttype = {arXiv},
+  eprint={1503.02531},
+}
