--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -6099,3 +6099,23 @@ year={2023},
   eprinttype = {arXiv},
   eprint={1503.02531},
 }
+
+@article{Mohammed:ACCESS'23,
+  title={{3D-DNaPE}: Dynamic Neighbor-Aware Performance Enhancement for Thermally Constrained {3D} Many-Core Systems},
+  author={Mohammed Sultan Mohammed and Ahlam Al-Dhamari and Mosab Hamdan and Abdul-Malik H. Y. Saad and Antar S. H. Abdul-Qawy and M. N. Marsono},
+  journal=access,
+  volume={11},
+  pages={131964--131978},
+  year={2023},
+  publisher={IEEE}
+}
+
+@inproceedings{Woo:ISCA'95,
+ author = {Steven Cameron Woo and Moriyoshi Ohara and Evan Torrie and Jaswinder Pal Singh and Anoop Gupta},
+ title = {The {SPLASH-2} programs: characterization and methodological considerations},
+ booktitle = isca,
+ year = {1995},
+ month = {June},
+ location = {Santa Margherita Ligure, Italy},
+ pages = {24--36},
+}
