--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -6119,3 +6119,32 @@ year={2023},
  location = {Santa Margherita Ligure, Italy},
  pages = {24--36},
 }
+
+@inproceedings{Khdr:DATE'24,
+ author = {Heba Khdr and Mustafa Enes Batur and Kanran Zhou and Mohammed Bakr Sikal and J\"{o}rg Henkel},
+ title = {Multi-Agent Reinforcement Learning for Thermally-Restricted Performance Optimization on Manycores},
+ booktitle = date,
+ year = {2024},
+ month = {March},
+ location = {Valencia, Spain},
+}
+
+@inproceedings{Dietrich:DAC'25,
+  title={Centralized Training and Decentralized Control through the Actor-Critic Paradigm for Highly Optimized Multicores},
+  author={Benedikt Dietrich and Heba Khdr and Joerg Henkel},
+  booktitle=dac,
+  month = {June},
+  year={2025},
+  location = {San Francisco, CA},
+}
+
+@article{Huang:TCAD'22,
+  title={Reinforcement Learning-Based Joint Reliability and Performance Optimization for Hybrid-Cache Computing Servers},
+  author={Darong Huang and Ali Pahlevan and Luis Costero and Marina Zapater and David Atienza},
+  journal=tcad,
+  volume={41},
+  number={12},
+  pages={5596--5609},
+  month={December},
+  year={2022},
+}
