--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -6148,3 +6148,11 @@ year={2023},
   month={December},
   year={2022},
 }
+
+@book{Oppenheim:Book'97,
+  author =       {Alan V. Oppenheim and Alan S. Willsky and S. Hamid Nawab},
+  title =        {Signals \& Systems},
+  edition =      {2nd},
+  publisher =    {Prentice-Hall},
+  year =         {1997},
+}
