--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -6156,3 +6156,10 @@ year={2023},
   publisher =    {Prentice-Hall},
   year =         {1997},
 }
+
+@book{Schilders:Book'08,
+editor = {Wilhelmus H.A. Schilders and Henk A. {van der Vorst} and Joost Rommes},
+title = {Model Order Reduction: Theory, Research Aspects and Applications},
+publisher = {Springer},
+year = {2008},
+}
