--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -6163,3 +6163,12 @@ title = {Model Order Reduction: Theory, Research Aspects and Applications},
 publisher = {Springer},
 year = {2008},
 }
+
+@inproceedings{Gu:COLM'24,
+  title={Linear-Time Sequence Modeling with Selective State Spaces},
+  author={Albert Gu and Tri Dao},
+  booktitle={Proc. Conf. on Language Modeling},
+  year={2024},
+  month = {October},
+  location = {Philadelphia, PA, USA}
+}
