--- a/uestc_eda.bib
+++ b/uestc_eda.bib
@@ -6131,7 +6131,7 @@ year={2023},
 
 @inproceedings{Dietrich:DAC'25,
   title={Centralized Training and Decentralized Control through the Actor-Critic Paradigm for Highly Optimized Multicores},
-  author={Benedikt Dietrich and Heba Khdr and Joerg Henkel},
+  author={Benedikt Dietrich and Heba Khdr and J\"{o}rg Henkel},
   booktitle=dac,
   month = {June},
   year={2025},
@@ -6167,7 +6167,7 @@ year = {2008},
 @inproceedings{Gu:COLM'24,
   title={Linear-Time Sequence Modeling with Selective State Spaces},
   author={Albert Gu and Tri Dao},
-  booktitle={Proc. Conf. on Language Modeling},
+  booktitle={Proc. Conf. on Language Modeling (COLM)},
   year={2024},
   month = {October},
   location = {Philadelphia, PA, USA}
